2001-05-08  Arturo Espinosa Aldama  <arturo@ximian.com>

	* general.pl.in (xst_end): Turn off reporting here, to make
	sure no further reporting gets mixed with the XML.

	* network.pl.in (xst_network_sysconfig_ifaces_get_existing):
	only check files that START with ifcfg-. This was confusing
	the backend with Mandrake's, and potentially others, backup
	files.

2001-05-08  Arturo Espinosa Aldama  <arturo@ximian.com>

	After some profiling, some optimizations:
	
	* report.pl.in (xst_report): Only send debug string if debug flag
	is set.

	* parse.pl.in (xst_parse_from_table): Calling xst_report instead
	of doing a direct debug.

	* gettext.pl.in (gettext): gettext results are now cached. This
	is still too expensive, and we should use the gettext CPAN module.

	* file.pl.in (xst_file_open_read_from_names): removed unnecesary
	debug function.
	(xst_file_run): system already calls with /bin/sh -c. Removed.
	  

2001-05-07  Arturo Espinosa Aldama  <arturo@ximian.com>

	* report.pl.in (xst_report_enter, xst_report_leave): trivialized
	  until a new solution comes. Read comments for comments.

2001-05-04  Hans Petter Jansson  <hpj@ximian.com>

	* shares-conf.in (read_exports): Parse NFS exports without options correctly.
	  (print_xml): Print a default name for unnamed shares.

2001-05-04  Hans Petter Jansson  <hpj@ximian.com>

	* shares-conf.in (write_fstab): Don't leave unaccounted-for shares lying
	  around.
	  (set_immediate): Use new service calls. Interim fix.

2001-04-30  Hans Petter Jansson  <hpj@ximian.com>

	* shares-conf.in (print_xml): Fixed an output problem in <allow> tags.

2001-04-27  Hans Petter Jansson  <hpj@ximian.com>

	Did a h4rD<0r3 patch of disks-conf.in, to allow it to operate on
	ext2 LABEL= devices found in the fstab.

	* disks-conf.in (update_partition): If we have a device node, try to get
	  its label. If we have a label, look for partitions with matching label
	  in all disks. Set the label when appropriate. Retrofitted with the new